[metadata]
name = milton
version = 0.6.2
author = MrHedmad
author_email = luca.visentin@unito.it
description = A discord bot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Milton
project_urls =
	Bug Tracker = https://github.com/MrHedmad/Milton/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
install_requires =
    PyYAML
    aioconsole
    python-box
    pre-commit
    ujson
    mpmath
    discord.py
    motor
    aiohttp
    cchardet
    aiodns 
    async-timeout
    tabulate
    feedparser
    pdf2image
    pyPDF2
    aiosqlite

python_requires = >=3.10

[options.package_data]
* = *.yml, *.yaml, *.txt, *.md, *.sql

[options.entry_points]
console_scripts =
	milton = milton.core.bot:run_bot