[metadata]
name = milton
version = attr: milton.__version__
author = MrHedmad
author_email = luca.visentin@unito.it
description = A discord bot for research laboratories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Milton
project_urls =
	Bug Tracker = https://github.com/MrHedmad/Milton/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
install_requires =
    discord.py==2.2.3
    python-box==7.0.1
    ujson==5.7.0
    tabulate==0.9.0
    feedparser==6.0.10
    pdf2image==1.16.3
    pypdf==3.9.0
    aiosqlite==0.19.0
    aiosmtplib==2.0.1
    markdown==3.4.2
    matplotlib==3.7.1
    prompt_toolkit==3.0.38
    colorama==0.4.6

python_requires = >=3.10

[options.entry_points]
console_scripts =
	milton = milton.core.bot:main
    milton_bot = milton.core.bot:main
