[metadata]
name = milton
version = attr: milton.__version__
author = MrHedmad
author_email = luca.visentin@unito.it
description = A discord bot for research laboratories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Milton
project_urls =
	Bug Tracker = https://github.com/MrHedmad/Milton/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
install_requires =
    discord.py==2.4.0
    python-box==7.2.0
    ujson==5.10.0
    tabulate==0.9.0
    feedparser==6.0.11
    pdf2image==1.17.0
    pypdf==5.1.0
    aiosqlite==0.20.0
    aiosmtplib==3.0.2
    markdown==3.7
    matplotlib==3.9.2
    prompt_toolkit==3.0.48
    colorama==0.4.6
    audioop-lts==0.2.1

python_requires = >=3.12

[options.entry_points]
console_scripts =
	milton = milton.core.bot:main
    milton_bot = milton.core.bot:main

[options.package_data]
milton =
    *.sql
    *.txt
